--- a/index.html
+++ b/index.html
@@ -93,10 +93,16 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#donate">Request or Donate</a>
+                        <a class="page-scroll" href="#contracting">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" target="_blank" href="https://github.com/fairydust-agency/pricing">Costs to build an app</a>
+                        <a class="page-scroll" href="#portfolio">Projects</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" target="_blank" href="https://github.com/fairydust-agency/pricing">Resources</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#impressum">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -451,7 +457,7 @@
                     </h3>
                   </div>
                   <div class="timeline-heading">
-                    <p>Occupy, Open Source, Startups</p>
+                    <p>Occupy, Open Source, civic tech</p>
                   </div>
                 </div>
               </li>
@@ -459,7 +465,7 @@
 
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="img-circle img-responsive" src="img/supporters/codingamigos.png" alt="">
+                  <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -479,7 +485,7 @@
 
               <li>
                 <div class="timeline-image">
-                  <img style="transform: scale(.8); border-radius: 0px; position: relative; top: 4px;" class="img-circle img-responsive" src="img/about/3.png" alt="">
+                  <img style="transform: scale(.8); border-radius: 0px; position: relative; top: 4px;" class="img-circle img-responsive" src="https://scontent.fbkk2-4.fna.fbcdn.net/v/t1.0-9/11193402_1389597664700225_7408552151536170940_n.png?oh=bcbc06a7dcc9f703f7e34ca75de291f9&oe=58D917EB" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -614,7 +620,7 @@
             </a>
             <div class="portfolio-caption">
               <h4><a href="http://meetup.com/codingamigos">Coding Amigos</a></h4>
-              <p class="text-muted">Run bi-weekly open hacking events in Berlin</p>
+              <p class="text-muted">Bi-weekly open hacking events in Berlin</p>
             </div>
           </div>
         </div>
@@ -691,7 +697,7 @@
                 <!-- Project Details Go Here -->
                 <h2>Coding Amigos</h2>
                 <p class="item-intro text-muted">Meetups and a digital collective</p>
-                <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
+                <img class="img-responsive img-centered" src="img/supporters/codingamigos.png" alt="">
                 <p>Coding Amigos is a bi-weeky Berlin based meetup and a digital collecitve for developers with activistic streak</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
@@ -851,7 +857,7 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
         <div class="row">
           <div class="col-lg-12 text-center">
             <h1 class="section-heading">Impressum</h1>
-            <h3 class="section-subheading text-muted">Investors & Sponsors behind our app</h3>
+            <h3 class="section-subheading text-muted">FairyDust is a worker cooperative</h3>
             <br><br>
           </div>
         </div>
@@ -873,11 +879,10 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
               </ul>
               <p class="text-muted">
                 Sole Owner of Micro Holding<br>
-                <a href="https://beta.companieshouse.gov.uk/company/09657159" target="_blank">Seraseed Ltd.</a><br>
-                Trevissome Park<br>
-                Blackwater<br>
-                Truro<br>
-                TR4 8UN
+                <a href="https://beta.companieshouse.gov.uk/company/09657159" target="_blank">Seraseed Ltd.</a><br><br>
+                <a href="https://twitter.com/serapath" target="_blank">@serapath</a><br>
+                <a href="https://github.com/serapath" target="_blank">Github</a><br>
+                <a href="mailto:contact@fairydust.agency" target="_blank">contact@fairydust.agency</a><br>
               </p>
             </div>
           </div>
@@ -899,11 +904,10 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
               </ul>
               <p class="text-muted">
                 Sole Owner of Micro Holding<br>
-                <a href="https://beta.companieshouse.gov.uk/company/09657161" target="_blank">Vision Baker Ltd.</a><br>
-                Chynoweth House<br>
-                Blackwater<br>
-                Truro<br>
-                TR4 8UN
+                <a href="https://beta.companieshouse.gov.uk/company/09657161" target="_blank">Vision Baker Ltd.</a><br><br>
+                <a href="https://twitter.com/ninabreznik" target="_blank">@ninabreznik</a><br>
+                <a href="https://github.com/ninabreznik" target="_blank">Github</a><br>
+                <a href="mailto:contact@fairydust.agency" target="_blank">contact@fairydust.agency</a><br>
               </p>
             </div>
           </div>
