--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
               <li>
                 <div class="timeline-image">
-                  <img style="transform: scale(.8); border-radius: 0px; position: relative; top: 4px;" class="img-circle img-responsive" src="https://scontent.fbkk2-4.fna.fbcdn.net/v/t1.0-9/11193402_1389597664700225_7408552151536170940_n.png?oh=bcbc06a7dcc9f703f7e34ca75de291f9&oe=58D917EB" alt="">
+                  <img style="transform: scale(.8); border-radius: 0px; position: relative; top: 4px;" class="img-circle img-responsive" src="img/about/3.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -616,7 +616,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+              <img src="img/supporters/codingamigos.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4><a href="http://meetup.com/codingamigos">Coding Amigos</a></h4>
