--- a/index.html
+++ b/index.html
@@ -870,6 +870,8 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
                 Developer and Worker owner
               </p>
               <ul class="list-inline social-buttons">
+                <li><a href="https://github.com/serapath"><i class="fa fa-github"></i></a>
+                </li>
                 <li><a href="http://twitter.de/serapath"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li><a href="http://facebook.com/serapath"><i class="fa fa-facebook"></i></a>
@@ -880,8 +882,6 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
               <p class="text-muted">
                 Sole Owner of Micro Holding<br>
                 <a href="https://beta.companieshouse.gov.uk/company/09657159" target="_blank">Seraseed Ltd.</a><br><br>
-                <a href="https://twitter.com/serapath" target="_blank">@serapath</a><br>
-                <a href="https://github.com/serapath" target="_blank">Github</a><br>
                 <a href="mailto:contact@fairydust.agency" target="_blank">contact@fairydust.agency</a><br>
               </p>
             </div>
@@ -895,6 +895,8 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
                 Developer and Worker owner
               </p>
               <ul class="list-inline social-buttons">
+                <li><a href="https://github.com/ninabreznik"><i class="fa fa-github"></i></a>
+                </li>
                 <li><a href="https://twitter.com/ninabreznik"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li><a href="https://www.facebook.com/breznik.nina"><i class="fa fa-facebook"></i></a>
@@ -905,8 +907,6 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
               <p class="text-muted">
                 Sole Owner of Micro Holding<br>
                 <a href="https://beta.companieshouse.gov.uk/company/09657161" target="_blank">Vision Baker Ltd.</a><br><br>
-                <a href="https://twitter.com/ninabreznik" target="_blank">@ninabreznik</a><br>
-                <a href="https://github.com/ninabreznik" target="_blank">Github</a><br>
                 <a href="mailto:contact@fairydust.agency" target="_blank">contact@fairydust.agency</a><br>
               </p>
             </div>
