--- a/index.html
+++ b/index.html
@@ -461,8 +461,6 @@
                   </div>
                 </div>
               </li>
-
-
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
@@ -496,7 +494,7 @@
                       We created an e-learning platform to teach programming in JavaScript
                     </h3>
                     <div class="timeline-heading">
-                    <p><a href="http://wizardamigosinstitute.github.io" target="_blank">Wizard Amigos Institute</a></p>
+                    <p><a href="http://app.wizardamigos.com" target="_blank">Wizard Amigos</a></p>
                     </div>
                   </div>
                 </div>
