--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
               <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/11039105_1513742412285749_5685782722459588784_n.png?oh=ec30a28fe3097e5691dccb675f7e99cb&oe=58D70391" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4><a href="http://wizardamigosinstitute.github.io">Wizard Amigos Institute</a></h4>
+              <h4><a href="http://app.wizardamigos.com">Wizard Amigos</a></h4>
               <p class="text-muted">E-learning JavaScript code camps</p>
             </div>
           </div>
