--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/11039105_1513742412285749_5685782722459588784_n.png?oh=ec30a28fe3097e5691dccb675f7e99cb&oe=58D70391" class="img-responsive" alt="">
+              <img src="https://avatars2.githubusercontent.com/u/12087830?v=3&s=200" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4><a href="http://app.wizardamigos.com">Wizard Amigos</a></h4>
@@ -669,7 +669,7 @@
               <div class="modal-body">
                 <h2>Wizard Amigos</h2>
                 <p class="item-intro text-muted">E-learning JavScript code camps</p>
-                <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
+                <img class="img-responsive img-centered" src="https://avatars2.githubusercontent.com/u/12087830?v=3&s=200" alt="">
                 <p>We organize code camps to get people started with our e-learning app. Our app to reduce youth unemployment in Serbia, helps refugees in Germany and helps learners in Taiwan, Thailand and other countries learn programming online and for free.</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
