Refresh the page with new info

--- a/index.html
+++ b/index.html
@@ -448,16 +448,13 @@
                   <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <p>2011-2013</p><br>
-                  </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
                       We personally engage in current movements for social change
                     </h3>
                   </div>
                   <div class="timeline-heading">
-                    <p>Occupy, Open Source, civic tech</p>
+                    <p>Occupy, Open Source, P2P, Civic Tech</p>
                   </div>
                 </div>
               </li>
@@ -466,15 +463,12 @@
                   <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <p>2014 - now</p><br>
-                  </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      We built a strong community of programmers with activistic streak
+                      We organize weekly open hacking events for self employed developers
                     </h3>
                     <div class="timeline-heading">
-                    <p><a href="http://www.codingamigos.com">Codingamigos</a></p>
+                    <p><a href="http://www.codingamigos.com">Coding Amigos</a></p>
                     </div>
                   </div>
                 </div>
@@ -486,35 +480,12 @@
                   <img style="transform: scale(.8); border-radius: 0px; position: relative; top: 4px;" class="img-circle img-responsive" src="img/about/3.png" alt="">
                 </div>
                 <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <p>2015 - now</p><br>
-                  </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      We created an e-learning platform to teach programming in JavaScript
+                      And also teach programming
                     </h3>
                     <div class="timeline-heading">
-                    <p><a href="http://app.wizardamigos.com" target="_blank">Wizard Amigos</a></p>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <p>2015 - now</p><br>
-                  </div>
-                  <div class="timeline-body">
-                    <h3 class="subheading dark">
-                      As a response to the refugee crisis, we developed a platform for helping newcomers find remote work
-                    </h3>
-                    <div class="timeline-heading">
-                    <p><a href="http://www.refugeeswork.com" target="_blank">RefugeesWork</a></p>
+                    <p><a href="http://wizardamigos.com/workshop_app/" target="_blank">Wizard Amigos</a></p>
                     </div>
                   </div>
                 </div>
@@ -536,12 +507,9 @@
                   </div>
                 </div>
                 <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <p>2016 - now</p><br>
-                  </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      We specialize in creating dynamic and affordable mobile, web and desktop applications for a wide variety of organizations.
+                      We are a developers' collective that creates dynamic mobile, web and desktop applications in hypermodular Javascript technologies
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="#">FairyDust</a></p>
@@ -571,7 +539,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h1 class="section-heading">Apps & Projects we work on voluntarily</h1>
+            <h1 class="section-heading">Projects we work on</h1>
             <br><br><br>
           </div>
         </div>
@@ -579,11 +547,16 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
             <!-- <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal"> -->
             <a class="portfolio-link" data-toggle="modal">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
+              <img src="img/portfolio/ethereum.png" class="img-responsive" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4><a href="http://remix.ethereum.org/">Ethereum Remix</a></h4>
+              <p class="text-muted">IDE for working with Ethereum contracts</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <!-- <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal"> -->
+            <a class="portfolio-link" data-toggle="modal">
               <img src="http://www.refugeeswork.com/images/interior1.jpg" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
@@ -594,31 +567,21 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
             <!-- <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal"> -->
             <a class="portfolio-link" data-toggle="modal">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
               <img src="img/about/wizard.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4><a href="http://app.wizardamigos.com">Wizard Amigos</a></h4>
+              <h4><a href="http://wizardamigos.com/workshop_app/">Wizard Amigos</a></h4>
               <p class="text-muted">E-learning JavaScript code camps</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <!-- <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal"> -->
             <a class="portfolio-link" data-toggle="modal">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img src="img/supporters/codingamigos.png" class="img-responsive" alt="">
+              <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4><a href="http://meetup.com/codingamigos">Coding Amigos</a></h4>
-              <p class="text-muted">Bi-weekly open hacking events in Berlin</p>
+              <p class="text-muted">Weekly open hacking events in Berlin and Taipei</p>
             </div>
           </div>
         </div>
@@ -645,7 +608,7 @@
                 <h2>RefugeesWork</h2>
                 <p class="item-intro text-muted">Online platform that helps newcomers find remote work</p>
                 <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                <p>Anyone can post a project and hire newcomers for remote freelance work.</p>
+                <p>As a response to the refugee crisis, we developed a platform for helping newcomers find remote work</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
             </div>
@@ -670,7 +633,7 @@
                 <h2>Wizard Amigos</h2>
                 <p class="item-intro text-muted">E-learning JavScript app</p>
                 <img class="img-responsive img-centered" src="img/about/wizard.png" alt="">
-                <p>We organize code camps to get people started with programming. Our app to reduce youth unemployment in Serbia, helps refugees in Germany and helps learners in Taiwan, Thailand and other countries learn programming online and for free.</p>
+                <p>We organize code camps to help people learn programming. Our e-learning app has helped to reduce youth unemployment in Serbia, helps refugees in Germany to learn coding and inspires other learners from Taiwan, UK, Slovenia, Thailand and many more.</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
             </div>
@@ -734,24 +697,8 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-              <h3>Mobile App Development</h3>
-              <p class="text-muted">Conceptualizing and crafting of high quality mobile apps</p>
-              <br>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box">
-              <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-              <h3>Maintainance</h3>
-              <p class="text-muted">Continuous delivery of updates for your audience</p>
-              <br>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box">
-              <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-              <h3>Promotional Strategy</h3>
-              <p class="text-muted">Strategy to integrate onboarding of users with app development</p>
+              <h3>App Development</h3>
+              <p class="text-muted">Conceptualizing and crafting of high quality desktop, mobile and web apps</p>
               <br>
             </div>
           </div>
@@ -801,7 +748,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Donate</h1>
-                    <p>We really need your help. Please, support our open source projects.</p>
+                    <p>You can also support our open source and volunteering work. Thank you!</p>
 <!-- https://gratipay.com/
 https://www.donorhut.com/pricing
 http://coverrme.com/howitworks
