Fix visual bugs

--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" target="_blank" href="https://github.com/fairydust-agency/pricing">Resources</a>
-                    </li>
+
                     <li>
                         <a class="page-scroll" href="#impressum">Contact</a>
                     </li>
@@ -555,16 +553,6 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <!-- <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal"> -->
-            <a class="portfolio-link" data-toggle="modal">
-              <img src="http://www.refugeeswork.com/images/interior1.jpg" class="img-responsive" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4><a href="http://www.refugeeswork.com">RefugeesWork</a></h4>
-              <p class="text-muted">Online platform for helping newcomers find remote work</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
             <!-- <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal"> -->
             <a class="portfolio-link" data-toggle="modal">
               <img src="img/about/wizard.png" class="img-responsive" alt="">
@@ -575,13 +563,13 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <!-- <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal"> -->
+            <!-- <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal"> -->
             <a class="portfolio-link" data-toggle="modal">
-              <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+              <img src="http://www.refugeeswork.com/images/interior1.jpg" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4><a href="http://meetup.com/codingamigos">Coding Amigos</a></h4>
-              <p class="text-muted">Weekly open hacking events in Berlin and Taipei</p>
+              <h4><a href="http://www.refugeeswork.com">RefugeesWork</a></h4>
+              <p class="text-muted">Online platform for helping newcomers find remote work</p>
             </div>
           </div>
         </div>
@@ -694,19 +682,19 @@
         <br>
       </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-lg-6 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
               <h3>App Development</h3>
-              <p class="text-muted">Conceptualizing and crafting of high quality desktop, mobile and web apps</p>
+              <p class="text-muted">Conceptualizing and crafting high quality desktop, mobile and web apps.</p>
               <br>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-lg-6 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
               <h3>Made with Love</h3>
-              <p class="text-muted">We are highly passionate about the projects we accept</p>
+              <p class="text-muted">We are highly passionate about the projects we accept. Tell us about yours!</p>
               <br>
             </div>
           </div>
@@ -716,7 +704,7 @@
         </h4>
         <br><br><br>
         <h4 class="dark text-center" style="width:50%; margin: 0 auto;">
-          Interested in hiring us? Have questions or comments about anything that you've seen on this site? Give us a call or use e-mail to get in touch. We'll respond as soon as we can!
+          Interested in hiring us? Have questions or comments about anything that you've seen on this site? Get in touch. We'll respond as soon as we can!
         </h4>
         <br><br><br>
         <div class="col-lg-4 col-lg-offset-2 text-center">
